--- a/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Browser.apk/res/values-fi-rFI/strings.xml
@@ -104,9 +104,17 @@
     <string name="agree_permissions_request">Salli</string>
     <string name="alert_tips">Tämä sivusto saattaa olla turvallisuusriski</string>
     <string name="allow">Salli</string>
+    <string name="app_continue_downloading_text">Jatka</string>
     <string name="app_download_market_text">Käytä Mi Markettia lataaksesi, nopeammin ja turvallisemmin</string>
+    <string name="app_download_now_text">Lataa</string>
+    <string name="app_download_success_text">Valmis</string>
+    <string name="app_downloading_ratio_text">Ladataan %s</string>
+    <string name="app_downloading_text">Ladataan</string>
+    <string name="app_installing_text">Asennetaan</string>
     <string name="app_name">InfoStream</string>
     <string name="app_new_version">Uusin versio tästä sovelluksesta on jo asennettuna</string>
+    <string name="app_open_text">Avaa</string>
+    <string name="app_task_download_exists_text">Lataus on jo olemassa</string>
     <string name="app_update_install">Valmiina asentamaan päivitys.</string>
     <string name="application_name">Selain</string>
     <string name="aqi_quality_index_break">ILI %1$s</string>
@@ -257,6 +265,8 @@
     <string name="delete_bookmark_warning">Poistetaanko kirjanmerkki %s?</string>
     <string name="delete_download">Poista</string>
     <string name="dialog_cannot_resume">Lataus keskeytyi</string>
+    <string name="dialog_clipboard_tabs_action">Avaa napauttamalla</string>
+    <string name="dialog_clipboard_tabs_tip">Löydä kopioidut linkit</string>
     <string name="dialog_confirm_delete_checkbox_message">Poista tiedosto sisäisestä tallennustilasta</string>
     <string name="dialog_confirm_delete_downloads_message">Poistetaanko %s tehtävää?</string>
     <string name="dialog_confirm_delete_the_download_item_message">Poistetaanko tämä tehtävä?</string>
@@ -427,6 +437,11 @@ katsoaksesi avoimia välilehtiä muilta laitteilta."</string>
     <string name="homepage_more_sites">Lisää sivuja</string>
     <string name="homepage_search_hint">Etsi</string>
     <string name="homepage_top_card_menu">Ylös</string>
+    <string name="hot_word_item_mark_ads_text">MAINOKSET</string>
+    <string name="hot_word_item_mark_burst_text">BURST</string>
+    <string name="hot_word_item_mark_hot_text">HOT</string>
+    <string name="hot_word_item_mark_new_text">UUTTA</string>
+    <string name="hot_word_item_mark_recommend_text">SUOSITTELE</string>
     <string name="hot_words_item_ads_mark">Mainokset</string>
     <string name="hybrid_application_no_data_text">Ei Miniohjelmia</string>
     <string name="hybrid_popup_window_delete_button">Poista</string>
@@ -897,6 +912,16 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
     <string name="nav_screen_incognito_title">Incognito-tila</string>
     <string name="nav_screen_tab_incognito_enter">Siirry incognito-välilehdelle</string>
     <string name="nav_screen_tab_incognito_exit">Poistu incognito-välilehdestä</string>
+    <string name="navigate_feedback_dislike">Ei kiinnosta</string>
+    <string name="navigate_feedback_dislike_tips">Vähennetään tämänkaltaisia videosuosituksia</string>
+    <string name="navigate_feedback_input_report_label">Muut syyt</string>
+    <string name="navigate_feedback_report">Ilmoita</string>
+    <string name="navigate_feedback_report_input_length">%1$d/100</string>
+    <string name="navigate_feedback_report_input_tips">Jätä kysymyksesi, hoidamme sen niin pian kuin mahdollista</string>
+    <string name="navigate_feedback_report_success">Ilmoitus onnistui</string>
+    <string name="navigate_feedback_report_title">Ilmoituksen syyt</string>
+    <string name="navigate_feedback_select_report_label">Valitse ilmoituksen syy</string>
+    <string name="navigate_feedback_submit">Lähetä</string>
     <string name="navigation_delete_all">Pyyhkäise vasemmalle ja oikealle sulkeaksesi kaikki välilehdet</string>
     <string name="navigationbar_rightbutton_actiontext_cancle">Peruuta</string>
     <string name="navigationbar_rightbutton_actiontext_go">Siirry</string>
@@ -1148,6 +1173,7 @@ Muista, että lataamasi tiedostot ja lisäämäsi kirjanmerkin silti tallennetaa
     <string name="search_keyword_browser">Selain</string>
     <string name="search_label">Selain</string>
     <string name="search_menu_title">Haku</string>
+    <string name="search_notification_btn_title">Haku</string>
     <string name="search_path_browser">Asetukset/Asennetut sovellukset/Selain</string>
     <string name="search_s139">139</string>
     <string name="search_settings_description">Kirjanmerkit ja verkkohistoria</string>
@@ -1194,6 +1220,10 @@ Selaimen täytyy yhdistää internetiin toimiakseen normaalisti. Sinun täytyy h
     <string name="skip_button_label">Ohita</string>
     <string name="skip_current_version">Ohita tämä versio</string>
     <string name="slide_guide">Pyyhkäise palataksesi</string>
+    <string name="small_video_ad_app_text_click">Lataa</string>
+    <string name="small_video_ad_app_text_open">Avaa</string>
+    <string name="small_video_ad_app_text_resume">Jatka</string>
+    <string name="small_video_ad_web_text">Avaa</string>
     <string name="small_video_boba_tab">Lähetys</string>
     <string name="small_video_load_failed">Lataaminen epäonnistui</string>
     <string name="small_video_loading">Ladataan...</string>
@@ -1261,13 +1291,11 @@ Selaimen täytyy yhdistää internetiin toimiakseen normaalisti. Sinun täytyy h
     <string name="suggestion_express_title">Seuraa pakettiasi</string>
     <string name="suggestion_hotwords_title_change_button_text">VAIHDA LISÄÄ</string>
     <string name="suggestion_hotwords_title_text">Haku</string>
-    <string name="suggestion_input_history_title_text">SYÖTTÖHISTORIA</string>
     <string name="suggestion_input_hitory_clear_text">TYHJENNÄ</string>
     <string name="suggestion_lottery_detail_pour">%s MUISTIO</string>
     <string name="suggestion_lottery_detail_price">JOKAINEN MUISTIO ON ARVOLTAAN %s YUAN</string>
     <string name="suggestion_lottery_detail_text">TÄMÄ KIERROS %s</string>
     <string name="suggestion_lottery_period">KIERROS %s</string>
-    <string name="suggestion_more_button_text">NÄYTÄ LISÄÄ</string>
     <string name="suggestion_more_news">LISÄÄ UUTISIA</string>
     <string name="suggestion_more_news_start_title_text">Aiheeseen liittyvät uutiset</string>
     <string name="suggestion_sliding_ads_info_mark_text">MAINOKSET</string>
