--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -681,10 +681,10 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="unsubscribe_card">Poista tilaus</string>
   <string name="unsubscribe_card_success">“%1$s” tilaus poistettiin onnistuneesti</string>
   <string name="unsubscribing_card">Tilaus poistettu</string>
-  <string name="user_notice_button_exit">Poistu</string>
+  <string name="user_notice_button_exit">Peruuta</string>
   <string name="user_notice_button_ok">OK</string>
   <string name="user_notice_declaration_ignore">Älä näytä uudestaan</string>
-  <string name="user_notice_message">Käyttäessäsi tätä tuotetta, sinä hyväksyt Xiaomin %1$s ja %2$s. Jotkut toiminnot vaativat internet yhteyttä, sijaintitietoja sekä pääsyä yhteystietoihin ja tekstiviesteihin toimiakseen normaalisti.</string>
+  <string name="user_notice_message">Sinun on hyväksyttävä meidän %1$s ja %2$s ennen Kalenterin käyttämistä. Jotta voimme tarjota tarkkoja tietoja paikallisista juhlapyhistä, syntymäpäivistä, luottokorttien takaisinmaksuista ja suunnitelluista matkoista, Kalenteri tarvitsee pääsyn sijaintiisi, viesteihisi sekä internetiin. Hyväksytkö?</string>
   <string name="user_notice_title">Huomio</string>
   <string name="user_notification">Ilmoitukset</string>
   <string name="user_notification_descrip">Näytä ilmoitukset aina, kun avaat Kalenterin</string>
