--- a/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
@@ -341,6 +341,8 @@ Käynnistä GPS koskettamalla näyttöä…"</string>
   <string name="cit_power_check_title">Akun ilmaisin</string>
   <string name="cit_pressure_sensor_check_summary">Paineen arvon pitäisi ilmestyä alle</string>
   <string name="cit_pressure_sensor_check_title">Paineanturi</string>
+  <string name="cit_proximity_data_check_summary">"Peitä läheisyysanturi (sijaitsee puhelimen yläreunassa lähellä kuulokevastaanotinta) kädelläsi ja sen jälkeen poista käsi anturilta. Arvon pitäisi nousta luvusta 0.0 kun siirrät kättäsi pois päin laitteesta.
+Jos se on ultraääniläheisyysanturi, simuloi toimintoa nostamalla puhelin testin aikana."</string>
   <string name="cit_proximity_sensor_check_summary">Peitä läheisyysanturi (sijaitsee puhelimen yläreunassa lähellä kuulokevastaanotinta) kädelläsi ja sen jälkeen poista käsi anturilta. Arvon pitäisi nousta luvusta 0.0 kun siirrät kättäsi pois päin laitteesta. Kalibroinnin aikana varmista, että anturin ja kätesi välissä ei ole mitään (esim. näytön suojaa tai hanskoja).</string>
   <string name="cit_proximity_sensor_check_title">Läheisyysanturi</string>
   <string name="cit_proximity_us_sensitivity">Herkkyys:</string>
