--- a/Finnish/main/CalendarProvider.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CalendarProvider.apk/res/values-fi-rFI/strings.xml
@@ -8,6 +8,7 @@
   <string name="calendar_info_no_calendars">Ei kalentereita</string>
   <string name="calendar_storage">Kalenterin tallennustila</string>
   <string name="channel_name">Kalenterimuistutukset</string>
+  <string name="cta_notice">Avaa Kalenteri ja salli sen yhdistää ensin internetiin.</string>
   <string name="debug_tool_delete_button">Poista nyt</string>
   <string name="debug_tool_email_body">Liitteenä kalenteritietokantani, joka sisältää kaikki tapaamiseni ja henkilötietoni. Käsiteltävä varoen.</string>
   <string name="debug_tool_email_sender_picker">Valitse ohjelma tiedoston lähettämiseen</string>
