--- a/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
@@ -505,6 +505,9 @@ Kun olet laittanut tiedoston \"music.mp3\" SD-kortin hakemistoon, napauta näytt
   <string name="cit_tool_cal_accelerometer">Kiihtyvyysanturin kalibrointityökalu</string>
   <string name="cit_tool_cal_camera">Kameran kalibrointityökalu</string>
   <string name="cit_tool_cal_gyroscope">Gyroskoopin kalibrointityökalu</string>
+  <string name="cit_tool_check_opt">Oletko varma?</string>
+  <string name="cit_tool_check_opt_with_reboot">Käynnistetään uudelleen, oletko varma?</string>
+  <string name="cit_tool_current_modem_test_mode">Nykyinen testitila:</string>
   <string name="cit_tool_drx_only">DRX</string>
   <string name="cit_tool_enable_3A_log">Ota 3A loki Switch käyttöön</string>
   <string name="cit_tool_enable_display_3A_log">Ota 3A lokin näyttäminen käyttöön</string>
@@ -526,11 +529,23 @@ Kun olet laittanut tiedoston \"music.mp3\" SD-kortin hakemistoon, napauta näytt
   <string name="cit_tool_modem_exit_ftm">Poistu FTM tilasta</string>
   <string name="cit_tool_modem_mbn">Muuta modeemin määrityksiä</string>
   <string name="cit_tool_modem_offline_log">Avaa/Sulje offline-loki</string>
+  <string name="cit_tool_modem_rf_ant_test">Modeemin rf ant testin asetukset</string>
+  <string name="cit_tool_modem_test_clr">Sulje gpio testi</string>
+  <string name="cit_tool_modem_test_get">Päivitä</string>
+  <string name="cit_tool_modem_test_mode">Modeemin testitilan asetukset</string>
+  <string name="cit_tool_modem_test_mode_closed">Testitila suljettiin</string>
+  <string name="cit_tool_modem_test_mode_mismatch">Testitila ristiriidassa</string>
+  <string name="cit_tool_modem_test_mode_opened">Testitila avattu</string>
+  <string name="cit_tool_modem_test_mode_select">Valitse testitila:</string>
+  <string name="cit_tool_modem_test_mode_set">Vahvista asetus</string>
+  <string name="cit_tool_modem_test_set">validate</string>
   <string name="cit_tool_nfc">NFC testityökalu</string>
   <string name="cit_tool_nfc_st">Nfc ST:</string>
   <string name="cit_tool_nfc_st_confreq">taajuus:</string>
   <string name="cit_tool_nfc_st_run">Käynnistä</string>
   <string name="cit_tool_nfc_st_stop">Lopeta</string>
+  <string name="cit_tool_no_repeat">Ei toistoja!</string>
+  <string name="cit_tool_not_support">Ei tuettu</string>
   <string name="cit_tool_prx_drx">PRx+DRx</string>
   <string name="cit_tool_prx_drx_select_mode">Valitse Tila:</string>
   <string name="cit_tool_prx_drx_select_rat">Valitse RAT:</string>
@@ -538,8 +553,14 @@ Kun olet laittanut tiedoston \"music.mp3\" SD-kortin hakemistoon, napauta näytt
   <string name="cit_tool_prx_drx_stop_test">Lopeta Testi</string>
   <string name="cit_tool_prx_only">PRX</string>
   <string name="cit_tool_rf_ant">RF/Antennin työkalut</string>
+  <string name="cit_tool_select_all">Valitse kaikki</string>
+  <string name="cit_tool_select_none">Älä valitse mitään</string>
+  <string name="cit_tool_select_opposite">Valitse päinvastoin</string>
+  <string name="cit_tool_setting_expired">Asetus vanhentui, yritä uudelleen!</string>
+  <string name="cit_tool_setting_wait">Asetetaan! Odota hetki (5 s)</string>
   <string name="cit_tool_switch_autosms">Ota käyttöön/Poista käytöstä AutoSMSReg</string>
-  <string name="cit_tool_tpdump">kosketa virheenkorjaustilaan</string>
+  <string name="cit_tool_to_fetching">Noudetaa</string>
+  <string name="cit_tool_tpdump">Kosketa virheenkorjaustilaan</string>
   <string name="cit_tool_wifi">Wi-Fi testityökalu</string>
   <string name="cit_tool_wifi_chain_1">1</string>
   <string name="cit_tool_wifi_chain_1_2">1+2</string>
