--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
@@ -18,7 +18,6 @@
   <string name="cloud_find_device">Etsi laite</string>
   <string name="cloud_find_device_off">Pois päältä</string>
   <string name="cloud_find_device_on">Päällä</string>
-  <string name="cloud_storage_full">Pilven tallennustila</string>
   <string name="cloudservice_new_sync">Synkronoi %s Mi Pilven kanssa</string>
   <string name="confirm_delete">Poista</string>
   <string name="confirm_save">Säilytä</string>
@@ -65,10 +64,25 @@
   <string name="ks_update_fail_request_timeout">Yhteyspyyntö aikakatkaistiin. Odota minuutti tai kaksi ja yritä uudelleen.</string>
   <string name="ks_update_success">Päivitettiin onnistuneesti</string>
   <string name="ks_update_wait">Odota hetki…</string>
+  <string name="last_sync_time_just_now">Juuri nyt</string>
+  <string name="last_sync_time_yesterday">Eilen</string>
   <string name="license_host_unreachable">Verkkoyhteyttä ei voi muodostaa. Näytä tiedot nyt menemällä %s.</string>
   <string name="loading">Odota hetki…</string>
   <string name="master_alert_notif_content">Synkronointi epäonnistui</string>
   <string name="master_alert_notif_title">Ota Mi Pilven synkronointi käyttöön</string>
+  <string name="member_entrance_normal_title">Muuta Mi Pilven suunnitelmaa</string>
+  <string name="member_entrance_title_free_high_case_a">Hanki lisää tallennustilaa</string>
+  <string name="member_entrance_title_free_high_case_b">Päivitä Mi Pilven suunnitelma</string>
+  <string name="member_entrance_title_free_low_case_a">Hanki lisää tallennustilaa</string>
+  <string name="member_entrance_title_free_low_case_b">Päivitä Mi Pilven suunnitelma</string>
+  <string name="member_entrance_title_premium_high_case_a">Muuta Mi Pilven suunnitelma</string>
+  <string name="member_entrance_title_premium_high_case_b">Uusiminen</string>
+  <string name="member_entrance_title_premium_low_case_a">Hanki lisää tallennustilaa</string>
+  <string name="member_entrance_title_premium_low_case_b">Päivitä Mi Pilven suunnitelma</string>
+  <string name="member_entrance_title_ultra_high_case_a">Uusiminen</string>
+  <string name="member_entrance_title_ultra_high_case_b">Uusiminen</string>
+  <string name="member_entrance_title_ultra_low_case_a">Uusiminen</string>
+  <string name="member_entrance_title_ultra_low_case_b">Uusiminen</string>
   <string name="member_menu_vipname_free">Ilmainen</string>
   <string name="member_menu_vipname_mega">Mega</string>
   <string name="member_menu_vipname_premium">Premium</string>
@@ -117,20 +131,8 @@
   <string name="micloud_confusion_toast_deny">Kirjaudu Mi Tilillesi</string>
   <string name="micloud_confusion_yes">Kyllä</string>
   <string name="micloud_detail_fail">Synkronointi epäonnistui</string>
-  <string name="micloud_detail_force_sync">Synkronoi nyt</string>
-  <string name="micloud_detail_lastest">Synkronoitu</string>
-  <string name="micloud_detail_lastest_with_off">Synkronoitu</string>
-  <string name="micloud_detail_not_syncable">Ei voi synkronoida</string>
-  <string name="micloud_detail_pause">Synkronointi pysäytetty</string>
-  <string name="micloud_detail_pending">Odottaa</string>
-  <string name="micloud_detail_preference_sync_items">Kohteet</string>
+  <string name="micloud_detail_not_syncable">Ei voi synkronoida</string>  
   <string name="micloud_detail_query_error">Synkronoinnin edistymisestä ei saatu tietoa</string>
-  <string name="micloud_detail_success">Synkronoitu</string>
-  <string name="micloud_detail_syncing">Synkronoidaan</string>
-  <string name="micloud_dialog_sync_now_message">Yhdistä Wi-Fi-verkkoon välttääksesi mobiilidatamaksut</string>
-  <string name="micloud_dialog_sync_now_negative">Ei nyt</string>
-  <string name="micloud_dialog_sync_now_positive">Käytä mobiilidataa</string>
-  <string name="micloud_dialog_sync_now_title">Synkronoi yhdistämällä Wi-Fi-verkkoon</string>
   <string name="micloud_dspt">Käytä Mi Pilveä datan synkronointiin, laitteesi paikantamiseen,</string>
   <string name="micloud_dspt_provision">Käytä Mi Pilveä datan synkronointiin, laitteesi paikantamiseen ja asioiden jakamiseen ystäviesi kanssa.</string>
   <string name="micloud_dspt_provision_xms">Käytä Mi Pilveä tietojen synkronointiin.</string>
@@ -169,16 +171,7 @@
   <string name="micloud_find_device_verify_close">Poista Etsi laite käytöstä</string>
   <string name="micloud_find_device_verify_fail">Etsi laite -ominaisuutta ei voitu aktivoida uudelleen</string>
   <string name="micloud_find_device_verify_progress">Aktivoidaan Etsi laite -ominaisuutta uudelleen…</string>
-  <string name="micloud_main_button_activate">Aktivoi</string>
-  <string name="micloud_main_button_authorize">Valtuuta</string>
   <string name="micloud_main_button_set_internet">Asetukset</string>
-  <string name="micloud_main_cancel_sync">Peruuta synkronointi</string>
-  <string name="micloud_main_cancel_sync_now">Peruutetaan…</string>
-  <string name="micloud_main_clear_now">Tyhjennä</string>
-  <string name="micloud_main_detail">Näytä tiedot</string>
-  <string name="micloud_main_error_activated_fail">Aktivoi SIM-korttisi.</string>
-  <string name="micloud_main_error_network_disallowed">Varmista, että sallit internetin käytön.</string>
-  <string name="micloud_main_error_permission_limit">Salli Mi Pilvelle käyttöoikeus tallennustilaan.</string>
   <string name="micloud_main_head_menu_cloud_backup">Aloitusnäytön varmuuskopiointi</string>
   <string name="micloud_main_head_menu_finddevice_unavailable">Etsi laite ei ole käytettävissä Toisessa tilassa, voit käyttää sitä Ensimmäisessä tilassa.</string>
   <string name="micloud_main_head_menu_recycle_bin_summary">Palauta poistetut kohteet</string>
@@ -186,45 +179,48 @@
   <string name="micloud_main_head_menu_state_close">Pois käytöstä</string>
   <string name="micloud_main_head_menu_state_open">Käytössä</string>
   <string name="micloud_main_head_menu_state_unavailable">Ei tuettu</string>
-  <string name="micloud_main_master_sync_on">Synkronointi päällä</string>
-  <string name="micloud_main_memory_low_message">Synkronoidaksesi, poista ensin pilvessä olevia kohteita.</string>
+  <string name="micloud_main_manual_sync">Manuaalinen synkronointi</string>
   <string name="micloud_main_memory_low_title">Puhelimen sisäinen tallennustila on lähes täynnä</string>
-  <string name="micloud_main_message_master_sync_off">Poistit automaattisen synkronoinnin käytöstä Ilmoitusalueelta.</string>
-  <string name="micloud_main_multi_user_error_message">"Kirjauduit sisään samalla tilillä, kuin Ensimmäisessä tilassa, joka johti Mi Pilven virheeseen.
-Käytä eri tiliä."</string>
-  <string name="micloud_main_multi_user_error_title">Mi Pilven virhe</string>
-  <string name="micloud_main_network_abnormal">Tarkista verkkoasetuksesi</string>
   <string name="micloud_main_network_error">Verkkoon ei voi yhdistää</string>
-  <string name="micloud_main_query_again">Lähetä uusi pyyntö</string>
-  <string name="micloud_main_query_error_message">Joidenkin palveluiden synkronoinnin valmistumista ei voitu vahvistaa</string>
-  <string name="micloud_main_query_error_title">Synkronoinnin etenemisestä ei saatu tietoa</string>
-  <string name="micloud_main_resume_sync_soon">Jatka synkronointia pian</string>
-  <string name="micloud_main_see_unsynced_data">Tarkista synkronoitavat tiedot</string>
-  <string name="micloud_main_set_internet">Verkko</string>
   <string name="micloud_main_simple_last_sync_time">Synkronoitu viimeksi： %s</string>
   <string name="micloud_main_simple_off">Synkronointi pois käytöstä</string>
-  <string name="micloud_main_simple_pending">Odottaa</string>
-  <string name="micloud_main_simple_synced">Synkronoitu</string>
-  <string name="micloud_main_simple_syncing">Synkronoidaan</string>
-  <string name="micloud_main_space_full_message">Osta lisää tallennustilaa Mi Pilvestä</string>
-  <string name="micloud_main_space_full_title">Tallennustilaa ei ole tarpeeksi, synkronointi pysäytetty</string>
-  <string name="micloud_main_space_low">Tallennustila on lähes täynnä</string>
-  <string name="micloud_main_sync_init">Haetaan tietoja</string>
-  <string name="micloud_main_sync_now">Synkronoi nyt</string>
-  <string name="micloud_main_sync_on">Synkronointi päällä</string>
-  <string name="micloud_main_sync_pause">Synkronointi pysäytetty</string>
-  <string name="micloud_main_sync_pending">Odotetaan synkronointia</string>
-  <string name="micloud_main_syncing">Synkronoidaan…</string>
-  <string name="micloud_main_title_master_sync_off">Automaattinen synkronointi on pois päältä</string>
-  <string name="micloud_main_title_sync_fail">Ei voi synkronoida</string>
-  <string name="micloud_main_title_sync_off">Synkronointi pois päältä</string>
-  <string name="micloud_main_update_space">Hanki lisää tallennustilaa.</string>
+  <string name="micloud_main_sync_mode_summary">Jotkut kohteet synkronoituvat näytön ollessa sammuksissa ja laite latauksessa.</string>
+  <string name="micloud_main_sync_mode_title">Virransäästötila</string>
   <string name="micloud_main_wait_charge">Jatka synkronointia lataamalla laitteesi täyteen.</string>
   <string name="micloud_main_wait_charge_sleep">Sammuta näyttö ja lataa laitteesi täyteen jatkaaksesi synkronointia.</string>
   <string name="micloud_main_wait_wlan">Odotetaan Wi-Fiä</string>
   <string name="micloud_main_wait_wlan_charge">Yhdistä Wi-Fi-verkkoon ja lataa laitteesi täyteen jatkaaksesi synkronointia.</string>
   <string name="micloud_main_wait_wlan_charge_sleep">Yhdistä Wi-Fi-verkkoon, sammuta näyttö ja lataa laitteesi täyteen jatkaaksesi synkronointia.</string>
   <string name="micloud_manage_space_data">Hallitse Mi Pilven tietoja</string>
+  <string name="micloud_manaul_sync_success_button_text">Näytä tiedot</string>
+  <string name="micloud_manaul_sync_success_title">Synkronoitiin onnistuneesti</string>
+  <string name="micloud_manual_activating">Aktivoidaan…</string>
+  <string name="micloud_manual_all_sync_off_button_text">Ota käyttöön</string>
+  <string name="micloud_manual_all_sync_off_summary">Palauta synkronoidut tiedot uusilla laitteilla käyttäen Mi Pilveä</string>
+  <string name="micloud_manual_all_sync_off_title">Mi Pilven synkronointi on pois käytöstä</string>
+  <string name="micloud_manual_buy_vip">Päivitä Mi Pilven suunnitelma</string>
+  <string name="micloud_manual_cloud_storage_full_button_text">Päivitä</string>
+  <string name="micloud_manual_cloud_storage_full_summary">Päivitä Mi Pilvesi suunnitelma synkronoidaksesi kuvia, yhteystietoja ja paljon muuta</string>
+  <string name="micloud_manual_cloud_storage_full_title">Mi Pilven tallennustila on täynnä. Synkronointi pysäytettiin.</string>
+  <string name="micloud_manual_cloud_storage_low_button_text">Päivitä</string>
+  <string name="micloud_manual_cloud_storage_low_summary">Päivitä Mi Pilvesi suunnitelma hankkiaksesi lisää tallennustilaa</string>
+  <string name="micloud_manual_cloud_storage_low_title">Mi Pilven tallennustila on vähissä. Kuviasi ei välttämättä synkronoida.</string>
+  <string name="micloud_manual_grant_permission">Anna käyttöoikeuksia</string>
+  <string name="micloud_manual_local_storage_low_button_text">Tyhjennä</string>
+  <string name="micloud_manual_local_storage_low_summary">Synkronointia ei voida jatkaa, koska tallennustila on vähissä. Vapauta tallennustilaa ensin.</string>
+  <string name="micloud_manual_local_storage_low_title">Tallennustila on vähissä</string>
+  <string name="micloud_manual_network_disconnet_button_text">Verkkoasetukset</string>
+  <string name="micloud_manual_network_disconnet_title">Verkkoyhteyttä ei voitu muodostaa</string>
+  <string name="micloud_manual_paused">Synkronointi pysäytetty</string>
+  <string name="micloud_manual_pausing">Synkronointi pysäytetty</string>
+  <string name="micloud_manual_pending">Odottaa</string>
+  <string name="micloud_manual_reactivate">Uudelleenaktivoi</string>
+  <string name="micloud_manual_sync_all">Synkronoi</string>
+  <string name="micloud_manual_sync_now">Synkronoi</string>
+  <string name="micloud_manual_sync_pause">Pysäytä</string>
+  <string name="micloud_manual_sync_resume">Jatka synkronointia</string>
+  <string name="micloud_manual_syncing">Synkronoidaan</string>
+  <string name="micloud_manual_title">Manuaalinen synkronointi</string>
   <string name="micloud_member_net_error_alert_message">Ei internet-yhteyttä.</string>
   <string name="micloud_member_net_error_alert_title">Verkkoon yhdistäminen epäonnistui</string>
   <string name="micloud_member_pay_miid_error_toast">Tili-virhe</string>
@@ -244,6 +240,8 @@ Käytä eri tiliä."</string>
   <string name="micloud_notif_title_multi_user_error">Mi Pilveen ei voi synkronoida</string>
   <string name="micloud_notif_title_privacy_reopen_failed">Mi Pilvi -palveluiden käyttöönottaminen epäonnistui</string>
   <string name="micloud_notif_title_sync_with_off">Synkronoi Mi Pilveen</string>
+  <string name="micloud_preference_last_sync_time">Edellinen synkronointiaika: %s</string>
+  <string name="micloud_preference_syncing">Synkronoidaan</string>
   <string name="micloud_privacy_cloud_off">Synkronointi pois käytöstä</string>
   <string name="micloud_privacy_cloud_sync">Ota Mi Pilvi -palvelut käyttöön</string>
   <string name="micloud_privacy_explanation">Hyväksy valtuutus ottaaksesi Mi Pilvi -palvelut käyttöön</string>
@@ -283,6 +281,20 @@ Käytä eri tiliä."</string>
   <string name="micloud_sync_alert_dialog_positive">OK</string>
   <string name="micloud_sync_alert_dialog_title">Käytä Mi Pilveä</string>
   <string name="micloud_sync_prompt_for_no_gallery_sync">Yhteystiedot, Kalenteri ja Muistiot synkronoidaan automaattisesti. Synkronoidaksesi enemmän kohteita, mene Mi Pilven asetuksiin.</string>
+  <string name="micloud_sync_result_already_in_progress">Edellinen synkronointi käynnissä</string>
+  <string name="micloud_sync_result_auth_exception">Todennuspoikkeus</string>
+  <string name="micloud_sync_result_cancel">Synkronointi peruutettiin</string>
+  <string name="micloud_sync_result_cloud_storage_full">Pilven tallennustila on täynnä</string>
+  <string name="micloud_sync_result_common_message">Ei voitu synkronoida. Odota minuutti tai kaksi ja yritä uudelleen.</string>
+  <string name="micloud_sync_result_cta_permission_error">Yhdistä ensin verkkoon</string>
+  <string name="micloud_sync_result_internal_error">Sisäinen virhe</string>
+  <string name="micloud_sync_result_io_exception">I/O-poikkeus</string>
+  <string name="micloud_sync_result_parse_exception">Tietojen jäsentämispoikkeus</string>
+  <string name="micloud_sync_result_permission_error">Käyttöoikeusvirhe</string>
+  <string name="micloud_sync_result_request_error">Verkkopyyntövirhe</string>
+  <string name="micloud_sync_result_secure_space_limit">Turvallisessa tilassa ei voi synkronoida</string>
+  <string name="micloud_sync_result_sim_activated_error">SIM-kortti ei ole aktivoitu</string>
+  <string name="micloud_sync_result_wifi_only">Synkronoi käyttäen vain Wi-Fiä</string>
   <string name="micloud_upgrade_member">Hanki tallennustilaa</string>
   <string name="micloud_user_space_title">Tallennustila</string>
   <string name="micloud_warn_full_sum">Uusia kohteita ei synkronoida Mi Pilveen.</string>
@@ -313,9 +325,7 @@ Tämä toiminto salaa ja lähettää laitteesi ID-tunnuksen Mi:n palvelimille."<
   <string name="mx_sub_dspt_provision">Mi Viesti</string>
   <string name="mx_sub_dspt_provision_with_voip">Internet puhelu</string>
   <string name="mx_voip_dspt">Mi Ääni</string>
-  <string name="network_unconnected">Ei yhteydessä verkkoon</string>
   <string name="no_sim">SIM-korttia ei havaittu</string>
-  <string name="other_sync_item">Muut synkronoitavat kohteet</string>
   <string name="phone_number_required_dspt_provision">"Tämä palvelu vaatii puhelinnumerosi. "</string>
   <string name="pref_summary_sync_display_photo_on_wifi_only">Synkronoi vain yhteystietojen profiilikuvat, kun olet yhteydessä Wi-Fi-verkkoon</string>
   <string name="pref_title_sync_contacts_title">Synkronoi yhteystiedot</string>
@@ -323,7 +333,6 @@ Tämä toiminto salaa ja lähettää laitteesi ID-tunnuksen Mi:n palvelimille."<
   <string name="privacy_policy">Tietosuojakäytäntö</string>
   <string name="reading_status">Ladataan tilaa…</string>
   <string name="reading_status_failure">Tilaa ei voitu ladata.</string>
-  <string name="recommend_open_all_sync">Synkronoi kaikki kohteet</string>
   <string name="search_cloudbackup_pref">Pilven varmuuskopiointi</string>
   <string name="search_cloudbackup_pref_desc">Ota käyttöön/Poista käytöstä Pilven Varmuuskopiointi</string>
   <string name="search_cloudbackup_pref_key_words">pilvivarmuuskopio, pilvi varmuuskopio</string>
@@ -352,6 +361,8 @@ Tämä toiminto salaa ja lähettää laitteesi ID-tunnuksen Mi:n palvelimille."<
   <string name="sub_alert_notif_title">Synkronoi Mi Pilveen</string>
   <string name="sub_sync_item_sms_summary">Synkronoi vain kuvalliset viestit, äänitiedostot ja muut mediatiedostot, kun olet yhteydessä Wi-Fi-verkkoon</string>
   <string name="sub_sync_item_sms_title_wifi_only">Synkronoi multimediaviestit vain Wi-Fi-yhteydellä</string>
+  <string name="sync_detail_summary_off">Ei käytössä</string>
+  <string name="sync_detail_text">Synkronoinnin tiedot</string>
   <string name="sync_dspt">Synkronointi</string>
   <string name="sync_dspt_entrance_provision">Synkronoi kuvasi, yhteystietosi, puheluhistoriasi ja viestisi kaikkien laitteidesi välillä. Käytä synkronoituja tietojasi millä tahansa selaimella osoitteessa %s.</string>
   <string name="sync_dspt_entrance_provision_confirm_close">Älä käytä</string>
@@ -383,6 +394,19 @@ Tämä toiminto salaa ja lähettää laitteesi ID-tunnuksen Mi:n palvelimille."<
   <string name="user_agreement_p5">"
 "</string>
   <string name="user_agreement_title">Mi Pilven Palveluehdot</string>
+  <string name="user_storage_info_available_text_prefix">%s käytettävissä</string>
+  <string name="warning_bar_action_add_short_cut">Lisää</string>
+  <string name="warning_bar_action_close">Sulje</string>
+  <string name="warning_bar_action_turn_on_master_sync">Ota käyttöön</string>
+  <string name="warning_bar_action_turn_on_sync">Ota käyttöön</string>
+  <string name="warning_bar_action_upgrade_vip">Päivitä Mi Pilven suunnitelma</string>
+  <string name="warning_bar_add_short_cut_success">Lisättiin onnistuneesti</string>
+  <string name="warning_bar_title_cloud_space_already_full">Mi Pilven tallennustila on vähissä. Kuviasi ei välttämättä synkronoida.</string>
+  <string name="warning_bar_title_cloud_space_full">Mi Pilven tallennustila on täynnä. Synkronointi pysäytettiin.</string>
+  <string name="warning_bar_title_master_sync_off">Automaattinen synkronointi on pois käytöstä</string>
+  <string name="warning_bar_title_network_unconnected">Verkkoyhteyttä ei voitu muodostaa</string>
+  <string name="warning_bar_title_short_cut">Lisätäänkö Mi Pilvestä Aloitusnäytön pikakuvake?</string>
+  <string name="warning_bar_title_sync_off">Mi Pilven synkronointi on pois käytöstä</string>
   <string name="wipe_data_dialog_button_check_sync">Tarkista synkronointi</string>
   <string name="wipe_data_dialog_msg">Joitakin kohteita %s ei ole synkronoitu. Ne tallennetaan laitteellesi ja niitä ei poisteta.</string>
   <string name="wipe_data_dialog_msg_and_on">, ja muita kohteita</string>
